[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Bg.gd" type="Script" id=2]
[ext_resource path="res://Data/Assets/Locations/Priemnaya/priemn.png" type="Texture" id=3]
[ext_resource path="res://Data/Assets/light.png" type="Texture" id=4]
[ext_resource path="res://Scripts/MainScene.gd" type="Script" id=5]
[ext_resource path="res://Data/Assets/Items/trash.png" type="Texture" id=6]
[ext_resource path="res://Data/Assets/Items/priemnaya3.png" type="Texture" id=7]
[ext_resource path="res://Data/Assets/Items/priemnaya_dver.png" type="Texture" id=8]
[ext_resource path="res://Data/Assets/Items/priema_wondow.png" type="Texture" id=9]
[ext_resource path="res://Data/Assets/Items/priemnaya2.png" type="Texture" id=10]
[ext_resource path="res://Data/Assets/Locations/Priemnaya/priemnaya_ventil.png" type="Texture" id=11]

[sub_resource type="GDScript" id=1]
script/source = "extends TextureButton


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"
var object_dialog = \"Что тут можно надеяться найти?\"
var player_minds = true

# Called when the node enters the scene tree for the first time.
func _ready():
	pass
	#if OS.window_size == Vector2(1280, 720):
		#var image = Image.new()
		#image.load(\"res://Data/Assets/Items/trash.png\")
		#var mask = BitMap.new()
		#mask.create_from_image_alpha(image)
		#texture_click_mask = mask


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( 12.1902, 34.5986, 46.6417, 24.6879, 81.0931, 29.4073, 82.9808, 35.5425, 85.8124, 39.7899, 85.8124, 48.7567, 83.9247, 56.3077, 71.6543, 144.56, 62.2156, 151.639, 46.6417, 153.055, 35.3152, 150.695, 27.2922, 145.504, 22.1009, 138.897, 15.9657, 40.7338, 12.1902, 40.2619 )

[sub_resource type="GDScript" id=3]
script/source = "extends TextureButton


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"
var scene = \"res://Scenes/HallRoom.tscn\"

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="GDScript" id=4]
script/source = "extends TextureButton


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"
var scene = \"res://Scenes/SecurityRoom.tscn\"

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="GDScript" id=5]
script/source = "extends TextureButton


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"
var object_dialog = \"Отсюда я приехала\"
var player_minds = true

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="GDScript" id=6]
script/source = "extends TextureButton


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"
var object_dialog = \"Окно с видом на океан\"
var second_object_dialog = \"Вокруг одни рыбы..\"

# Called when the node enters the scene tree for the first time.
func _ready():
	pass
	#if OS.window_size == Vector2(1280, 720):
		#var image = Image.new()
		#image.load(\"res://Data/Assets/Items/sea_window.png\")
		#var mask = BitMap.new()
		#mask.create_from_image_alpha(image)
		#texture_click_mask = mask


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="GDScript" id=7]
script/source = "extends TextureButton


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"
var object_dialog = \"Старая вентиляция\"

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="GDScript" id=8]
script/source = "extends Button


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
func _pressed():
	SceneChanger.goto_scene(\"res://Scenes/HallRoom.tscn\")
"

[sub_resource type="GDScript" id=9]
script/source = "extends Button


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
func _pressed():
	SceneChanger.goto_scene(\"res://Scenes/SecurityRoom.tscn\")
"

[sub_resource type="GDScript" id=10]
script/source = "extends Button


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
func _pressed():
	Gui.dialogbox.show_dialog(self.text)
"

[sub_resource type="GDScript" id=11]
script/source = "extends Button


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
func _pressed():
	Gui.dialogbox.show_dialog_tree(\"greeting\")
"

[sub_resource type="GDScript" id=12]
script/source = "extends Button


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
func _pressed():
	Gui.dialogbox.show_dialog(self.text, null, 0)
"

[node name="MainScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="NinePatchRect" parent="."]
margin_left = 0.561218
margin_top = 0.333717
margin_right = 1280.56
margin_bottom = 720.334
texture = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left_wall" type="TextureButton" parent="."]
margin_right = 64.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right_wall" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -128.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trash" type="TextureButton" parent="."]
margin_left = 184.0
margin_top = 392.0
margin_right = 281.0
margin_bottom = 553.0
texture_normal = ExtResource( 6 )
expand = true
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LightOccluder2D" type="LightOccluder2D" parent="Trash"]
occluder = SubResource( 2 )

[node name="Hall_door" type="TextureButton" parent="."]
margin_left = 10.0
margin_top = 212.0
margin_right = 173.0
margin_bottom = 664.0
texture_normal = ExtResource( 8 )
expand = true
script = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Security_door" type="TextureButton" parent="."]
margin_left = 276.0
margin_top = 178.0
margin_right = 482.0
margin_bottom = 527.0
texture_normal = ExtResource( 10 )
expand = true
script = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lift_door" type="TextureButton" parent="."]
margin_left = 771.0
margin_top = 174.0
margin_right = 969.0
margin_bottom = 525.0
texture_normal = ExtResource( 7 )
expand = true
script = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sea_window" type="TextureButton" parent="."]
margin_left = 1099.0
margin_top = 96.0
margin_right = 1268.0
margin_bottom = 510.0
texture_normal = ExtResource( 9 )
expand = true
script = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ventil" type="TextureButton" parent="."]
margin_left = 242.0
margin_top = 52.0
margin_right = 440.0
margin_bottom = 164.0
texture_normal = ExtResource( 11 )
expand = true
script = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 344, 104 )
scale = Vector2( 0.351296, 0.294057 )
texture = ExtResource( 4 )
color = Color( 0.607843, 0.67451, 0.619608, 1 )
energy = 1.75
mode = 2
shadow_enabled = true
shadow_color = Color( 0.0313726, 0.0313726, 0.0313726, 0 )

[node name="Light2D2" type="Light2D" parent="."]
position = Vector2( 872, 144 )
scale = Vector2( 0.367572, 0.116192 )
texture = ExtResource( 4 )
texture_scale = 0.66
color = Color( 0.623529, 0.192157, 0.337255, 1 )
energy = 1.54
mode = 2
shadow_enabled = true
shadow_color = Color( 0.0313726, 0.0313726, 0.0313726, 0 )

[node name="Light2D3" type="Light2D" parent="."]
position = Vector2( 1181.24, 305.449 )
scale = Vector2( 0.340613, 0.551006 )
texture = ExtResource( 4 )
color = Color( 0.235294, 0.270588, 0.439216, 1 )
energy = 1.75
mode = 2
shadow_enabled = true
shadow_color = Color( 0.0313726, 0.0313726, 0.0313726, 0 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 544.0
margin_top = 40.0
margin_right = 679.002
margin_bottom = 156.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hall" type="Button" parent="GridContainer"]
margin_right = 135.0
margin_bottom = 20.0
text = "hall"
script = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Security" type="Button" parent="GridContainer"]
margin_top = 24.0
margin_right = 135.0
margin_bottom = 44.0
text = "security"
script = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="GridContainer"]
margin_top = 48.0
margin_right = 135.0
margin_bottom = 68.0
text = "test oneshot dialog"
script = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="GridContainer"]
margin_top = 72.0
margin_right = 135.0
margin_bottom = 92.0
text = "dialog tree"
script = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="GridContainer"]
margin_top = 96.0
margin_right = 135.0
margin_bottom = 116.0
text = "set skippable text"
script = SubResource( 12 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 600.012, 516.224 )
[connection signal="pressed" from="Left_wall" to="." method="_on_Left_wall_pressed"]
[connection signal="pressed" from="Right_wall" to="." method="_on_Right_wall_pressed"]
[connection signal="pressed" from="Trash" to="." method="_on_Trash_pressed"]
[connection signal="pressed" from="Hall_door" to="." method="_on_Hall_door_pressed"]
[connection signal="pressed" from="Security_door" to="." method="_on_Security_door_pressed"]
[connection signal="pressed" from="Lift_door" to="." method="_on_Lift_door_pressed"]
[connection signal="pressed" from="Sea_window" to="." method="_on_Sea_window_pressed"]
[connection signal="pressed" from="Ventil" to="." method="_on_Ventil_pressed"]
